added validation to the activeuserdeletecommand file